# gelviz

./: README.md  requirenments.txt  setup.cfg
data/: gencode.v19.annotation.genes_genes.bed
docs/source/: .acknowledgements.rst.swp  .example.rst.swp  .gelviz.rst.swp  .index.rst.swp  .intro.rst.swp  .license.rst.swp  acknowledgements.rst  conf.py  example.rst  gelviz.rst  index.rst  intro.rst  license.rst
gelviz/: __init__.py  basic.py  gelviz.py
jupyter_notebooks/: gelviz_example.ipynb
jupyter_notebooks/.ipynb_checkpoints/: gelviz_example-checkpoint.ipynb
