[metadata]
# replace with your username:
name = gelviz
version = 0.9
author = Matthias Bieg
author_email = matthias.bieg@gmail.com
description = A python package for plotting genomic elements in a genome browser style
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HiDiHlabs/gelviz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.0
